--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'montserrat-regular';
-  src: url(./montserrat-regular.woff) format('woff'),
-       url(./montserrat-regular.woff2) format('woff2');
+  font-family: 'capsuula';
+  src: url(./capsuula.woff) format('woff'),
+       url(./capsuula.woff2) format('woff2');
 }
