--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'capsuula';
-  src: url(./capsuula.woff) format('woff'),
-       url(./capsuula.woff2) format('woff2');
+  font-family: 'proxima-nova-regular';
+  src: url(./proxima-nova-regular.woff) format('woff'),
+       url(./proxima-nova-regular.woff2) format('woff2');
 }
