--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Ubuntu-Regular';
-  src: url(./Ubuntu-Regular.woff) format('woff'),
-       url(./Ubuntu-Regular.woff2) format('woff2');
+  font-family: 'Oswald-Regular';
+  src: url(./Oswald-Regular.woff) format('woff'),
+       url(./Oswald-Regular.woff2) format('woff2');
 }
