--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'BrittanySignature';
-  src: url(./BrittanySignature.woff) format('woff'),
-       url(./BrittanySignature.woff2) format('woff2');
+  font-family: 'JonathanSignature';
+  src: url(./JonathanSignature.woff) format('woff'),
+       url(./JonathanSignature.woff2) format('woff2');
 }
