--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'JonathanSignature';
-  src: url(./JonathanSignature.woff) format('woff'),
-       url(./JonathanSignature.woff2) format('woff2');
+  font-family: 'WindSong-Regular';
+  src: url(./WindSong-Regular.woff) format('woff'),
+       url(./WindSong-Regular.woff2) format('woff2');
 }
